<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flipper_characters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.characters.CharactersFragment">

    <include
        android:id="@+id/include_view_characters_loading_state"
        layout="@layout/include_view_characters_loading_state" />

    <include
        android:id="@+id/include_view_list_character"
        layout="@layout/include_view_list_character" />

    <include
        android:id="@+id/include_view_characters_error_state"
        layout="@layout/include_view_characters_error_state" />

</ViewFlipper>