<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/text_initial_loading_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_loading_data"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textSize="32sp"
        app:drawableTopCompat="@drawable/ic_dissatisfied" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_try_again"/>

</LinearLayout>