<?xml version="1.0" encoding="utf-8"?><!--suppress NavigationFile -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:label="@string/characters_screen_title"
    app:startDestination="@id/charactersFragment">

    <fragment
        android:id="@+id/charactersFragment"
        android:name="com.example.marvelapp.presentation.characters.CharactersFragment"
        android:label="@string/characters_screen_title"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_charactersFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_charactersFragment_to_sortFragment"
            app:destination="@id/sortFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.marvelapp.presentation.detail.DetailFragment"
        android:label="{screenTitle}"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="detailViewArg"
            app:argType="com.example.marvelapp.presentation.detail.DetailViewArg" />
        <argument
            android:name="screenTitle"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/sortFragment"
        android:name="com.example.marvelapp.presentation.sort.SortFragment"
        tools:layout="@layout/fragment_sort" />
</navigation>